Added image folder and portait img

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
         <a href="###">Contact</a>
       </nav>
     </header>
+
+    <div class="top-content">
+      <section class="left-content">
+        <h1>Justin Renninger</h1>
+        <h2>Web Developer</h2>
+      </section>
+      <img src="" alt="">
+      <section class="right-content">
+
+      </section>
+    </div>
   </div>
 </body>
 </html>
