Finished structuring and styling intro

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
   <title>My Resume</title>
@@ -28,11 +29,17 @@
       <section class="left-content">
         <h1>Justin Renninger</h1>
         <h2>Web Developer</h2>
+        <h2>Problem Solver</h2>
+        <h2>Critical Thinker</h2>
       </section>
-      <img src="" alt="">
+      <img src="img/portait.jpg" alt="">
       <section class="right-content">
-
+        <p>“When we are no longer able to change a situation, we are challenged to change ourselves.” – Viktor Frankl</p>
       </section>
+    </div>
+
+    <div class="technologies">
+
     </div>
   </div>
 </body>
