--- a/index.html
+++ b/index.html
@@ -38,8 +38,19 @@
       </section>
     </div>
 
-    <div class="technologies">
+    <div class="bottom-content">
+      <section class=technologies>
+        <h2>Technologies</h2>
+        <div class="tech-images">
+          <img src="img/html5-logo.png" alt="">
+          <img src="img/css3-logo.png" alt="">
+          <img src="img/javascript-logo.png" alt="">
+        </div>
+      </section>
 
+      <section class="education">
+        <h2>Education</h2>
+      </section>
     </div>
   </div>
 </body>
