Finished education section and added work hostiry section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
     </div>
 
-    <div class="bottom-content">
+    <div class="middle-content">
       <section class=technologies>
         <h2>Technologies</h2>
         <div class="tech-images">
@@ -50,8 +50,41 @@
 
       <section class="education">
         <h2>Education</h2>
+        <section class="schools">
+          <div id="lambda-school">
+            <h3>Lambda School</h3>
+            <p>Full Stack Web Development</p>
+          </div>
+          <div id="rcbc">
+            <h3>Rowan College at Burlington County</h3>
+            <p>A.A.S Computer Science</p>
+          </div>
+          <div id ="certs">
+            <h3>Other Experience</h3>
+          </div>
+        </section>
       </section>
     </div>
+
+    <section class="work-history">
+      <h2>Work History</h2>
+      <section class="work-container">
+        <div id="work1">
+          <h3>Job 1</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo officia nesciunt, ex ipsam modi quas nam assumenda minus autem obcaecati aliquid qui ut deleniti voluptate quisquam, laudantium odio omnis quaerat.</p>
+        </div>
+        <div id="work2">
+          <h3>Job 2</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, ut dolorum dolor, culpa sunt at tenetur asperiores optio, nisi veniam quaerat. Eos facilis consequatur totam quisquam laboriosam fuga, suscipit natus!</p>
+        </div>
+        <div id="work3">
+          <h3>Job 3</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit cumque nesciunt nihil accusantium autem totam, atque inventore nulla iure perferendis, voluptate dignissimos nam sint temporibus ipsa quos ducimus voluptatibus quis.</p>
+        </div>
+      </section>
+        
+    </section>
+
   </div>
 </body>
 </html>
