Finished work history section and added footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -79,12 +80,14 @@
         </div>
         <div id="work3">
           <h3>Job 3</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit cumque nesciunt nihil accusantium autem totam, atque inventore nulla iure perferendis, voluptate dignissimos nam sint temporibus ipsa quos ducimus voluptatibus quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, ut dolorum dolor, culpa sunt at tenetur asperiores optio, nisi veniam quaerat. Eos facilis consequatur totam quisquam laboriosam fuga, suscipit natus!</p>
         </div>
       </section>
-        
     </section>
 
+    <footer>
+      
+    </footer>
   </div>
 </body>
 </html>
