Added media queries for better experience on phone

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     </section>
 
     <footer>
-      
+      <p>Contact me:</p>
+      <p>milare8@gmail.com</p>
+      <p>484-546-1043</p>
     </footer>
   </div>
 </body>
