--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+
+<!------------------------------->
+<!--WRITTEN BY JUSTIN RENNINGER-->
+<!------------------------------->
 </head>
 
 <body>
   <div class="container">
-    <header>
+    <!-----HEADER----->
+    <header> 
       <nav>
         <a href="###">Home</a>
         <a href="###">About</a>
@@ -26,6 +31,7 @@
       </nav>
     </header>
 
+    <!-----TOP CONTENT----->
     <div class="top-content">
       <section class="left-content">
         <h1>Justin Renninger</h1>
@@ -39,6 +45,7 @@
       </section>
     </div>
 
+    <!-----MIDDLE CONTENT----->
     <div class="middle-content">
       <section class=technologies>
         <h2>Technologies</h2>
@@ -67,6 +74,7 @@
       </section>
     </div>
 
+    <!-----WORK HISTORY SECTION----->
     <section class="work-history">
       <h2>Work History</h2>
       <section class="work-container">
@@ -85,6 +93,7 @@
       </section>
     </section>
 
+    <!-----FOOTER----->
     <footer>
       <p>Contact me:</p>
       <p>milare8@gmail.com</p>
