--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <img src="img/html5-logo.png" alt="">
           <img src="img/css3-logo.png" alt="">
           <img src="img/javascript-logo.png" alt="">
+          <img src="img/cplusplus-logo.png" alt="">
         </div>
       </section>
 
