Added more animations

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
           </div>
           <div id ="certs">
             <h3>Other Experience</h3>
+            <div class="list-of-certs">
+              <ul>
+                <li>A+ Certified</li>
+              </ul>
+              <ul>
+                <li>Sec+ Certified</li>
+              </ul>
+            </div>
           </div>
         </section>
       </section>
