--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       <section class=technologies>
         <h2>Technologies</h2>
         <div class="tech-images">
-          <img src="img/html5-logo.png" alt="">
-          <img src="img/css3-logo.png" alt="">
-          <img src="img/javascript-logo.png" alt="">
-          <img src="img/cplusplus-logo.png" alt="">
+          <img src="img/html5-logo.png" alt="" id="html5">
+          <img src="img/css3-logo.png" alt="" id="css3">
+          <img src="img/javascript-logo.png" alt="" id="js">
+          <img src="img/cplusplus-logo.png" alt="" id="cpp">
         </div>
       </section>
 
