Added more animations

--- a/index.html
+++ b/index.html
@@ -87,18 +87,49 @@
     <section class="work-history">
       <h2>Work History</h2>
       <section class="work-container">
+
         <div id="work1">
-          <h3>Job 1</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo officia nesciunt, ex ipsam modi quas nam assumenda minus autem obcaecati aliquid qui ut deleniti voluptate quisquam, laudantium odio omnis quaerat.</p>
+          <div class="work1-inner">
+            <div class="work1-front">
+              <h3>Job 1</h3>
+              <p>Position/Title</p>
+              <p>(mo/yr - mo/yr)</p>
+            </div>
+            <div class="work1-back">
+              <h3>Job 1</h3>
+              <p>Job Duties</p>
+            </div>
+          </div>
         </div>
-        <div id="work2">
-          <h3>Job 2</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, ut dolorum dolor, culpa sunt at tenetur asperiores optio, nisi veniam quaerat. Eos facilis consequatur totam quisquam laboriosam fuga, suscipit natus!</p>
-        </div>
-        <div id="work3">
-          <h3>Job 3</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, ut dolorum dolor, culpa sunt at tenetur asperiores optio, nisi veniam quaerat. Eos facilis consequatur totam quisquam laboriosam fuga, suscipit natus!</p>
-        </div>
+
+        <div id="work1">
+            <div class="work1-inner">
+              <div class="work1-front">
+                <h3>Job 2</h3>
+                <p>Position/Title</p>
+                <p>(mo/yr - mo/yr)</p>
+              </div>
+              <div class="work1-back">
+                <h3>Job 1</h3>
+                <p>Job Duties</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="work1">
+              <div class="work1-inner">
+                <div class="work1-front">
+                  <h3>Job 3</h3>
+                  <p>Position/Title</p>
+                  <p>(mo/yr - mo/yr)</p>
+                </div>
+                <div class="work1-back">
+                  <h3>Job 1</h3>
+                  <p>Job Duties</p>
+                </div>
+              </div>
+            </div>
+
       </section>
     </section>
 
